2004-08-29  James Antill  <james@and.org>

	* NEWS (2004-08-29): Release 1.0.13
	
2004-08-20  James Antill  <james@and.org>

	* include/vstr-inline.h (vstr_sc_add_b_uint16): Added function.
	(vstr_sc_add_b_uint32): Added function.
	(vstr_sc_sub_b_uint16): Added function.
	(vstr_sc_sub_b_uint32): Added function.
	(vstr_sc_parse_b_uint16): Added function.
	(vstr_sc_parse_b_uint32): Added function.
	(vstr_iter_fwd_buf): Added function.
	(vstr_iter_fwd_cstr): Added function.

2004-07-30  James Antill  <james@and.org>

	* src/vstr_dbl/vstr_add_fmt_dbl_none.c (vstr__add_fmt_dbl): Use Vstr
	locale of decimal point.

2004-06-08  James Antill  <james@and.org>

	* include/fix.h: open63 -> open for FreeBSD builds.

2004-05-14  James Antill  <james@and.org>

	* include/vstr-const.h (VSTR_TYPE_FMT_PTR_SIGNED_CHAR): Added type.
	(VSTR_TYPE_FMT_PTR_SHORT): Added type.
	(VSTR_TYPE_FMT_PTR_INT): Added type.
	(VSTR_TYPE_FMT_PTR_LONG): Added type.
	(VSTR_TYPE_FMT_PTR_LONG_LONG): Added type.
	(VSTR_TYPE_FMT_PTR_SSIZE_T): Added type.
	(VSTR_TYPE_FMT_PTR_PTRDIFF_T): Added type.
	(VSTR_TYPE_FMT_PTR_INTMAX_T): Added type.

2004-05-12  James Antill  <james@and.org>

	* src/vstr_add.c (vstr__cache_iovec_maybe_add): Remove old use of
	iovec_auto_update flag.

2004-05-04  James Antill  <james@and.org>

	* src/vstr_add_fmt.c (vstr__add_fmt_number): Added uintptr_t as the
	convertion for %p.

2004-04-07  James Antill  <james@and.org>

	* src/vstr_parse.c (vstr_parse_num): Added function.

2004-04-05  James Antill  <james@and.org>

	* include/vstr-inline.h (vstr_iter_fwd_chr): Added function.
	(vstr_iter_pos): Added function.
	(vstr_iter_len): Added function.

	* src/vstr_split.c (vstr__split_hdl_null_mid): Fix null mid splitting
	return value on malloc error cases.
	(vstr__split_hdl_null_beg): Fix null beg splitting return value on
	malloc error cases.

2004-04-01  James Antill  <james@and.org>

	* src/vstr_sc_posix.c (vstr_sc_write_file): Fix return when close fails.