@@ -57,9 +57,9 @@
       <Filename_Versioned>vstr-1.0.13</Filename_Versioned>
       <Filename_Previous>vstr-1.0.12</Filename_Previous>
       <Filename_Long>vstr-1.0.13.tar.gz</Filename_Long>
-      <File_Size_Bytes>977942</File_Size_Bytes>
-      <File_Size_K>955.02</File_Size_K>
-      <File_Size_MB>0.93</File_Size_MB>
+      <File_Size_Bytes>1077620</File_Size_Bytes>
+      <File_Size_K>1052.36</File_Size_K>
+      <File_Size_MB>1.02</File_Size_MB>
     </File_Info>
     <Expire_Info>
       <Has_Expire_Info>N</Has_Expire_Info>
