@@ -70,9 +70,9 @@ AC_SUBST(LDFLAGS)
 
 VSTR_MAJOR_VERSION=1
 VSTR_MINOR_VERSION=0
-VSTR_MICRO_VERSION=13
-VSTR_INTERFACE_AGE=0
-VSTR_BINARY_AGE=13
+VSTR_MICRO_VERSION=14
+VSTR_INTERFACE_AGE=1
+VSTR_BINARY_AGE=14
 VSTR_VERSION=$VSTR_MAJOR_VERSION.$VSTR_MINOR_VERSION.$VSTR_MICRO_VERSION
 
 # libtool versioning
@@ -971,6 +971,9 @@ local_cv_has_mallinfo=no,
 AC_MSG_RESULT($local_cv_has_mallinfo)
 case x$local_cv_has_mallinfo in
 xyes) AC_DEFINE(HAVE_MALLINFO)
+      AM_CONDITIONAL(MALLINFO_AVAIL, true)
+      ;;
+xno)  AM_CONDITIONAL(MALLINFO_AVAIL, false)
 esac
 
 AC_MSG_CHECKING(for termcap variables)
