@@ -1,4 +1,4 @@
-2004-08-29: Version 1.0.13 ... Nore testing, now at 100% code coverage.
+2004-08-29: Version 1.0.13 ... More testing, now at 100% code coverage.
 Some functions were added for working with binary data, using iterators,
 doing user friend byte output with large numbers, and working with things
 like gmp. Build is now much nicer, with the examples being built by default
