@@ -1,3 +1,13 @@
+2004-09-07  James Antill  <james@and.org>
+
+	* src/vstr_add_fmt.c (vstr__add_fmt_usr_write_spec): Fix endian issue
+	for ptrdiff_t.
+
+2004-09-03  James Antill  <james@and.org>
+
+	* src/vstr_cntl.c (vstr_cntl_conf): Fix endian issue, on returned 
+	flag value.
+
 2004-08-29  James Antill  <james@and.org>
 
 	* NEWS (2004-08-29): Release 1.0.13
